1. 压测es组件.